docs fixed again (i'm tired of this...) #держувкурсе
